# salabim

./: .gitignore  Bank Renege Simpy 3.py  Bank Renege.py  Car wash SimPy.py  Demo AnimateEntry.py  Demo animate 1.py  Demo animate 2.py  Demo animation classes.py  Demo animation dynamic lambda.py  Demo animation dynamic.py  Demo image change 1.py  Demo image change 2.py  Demo image change 3.py  Demo interrupt resume.py  Demo periodmonitor.py  Demo queue animation.py  Demo show state of component.py  Demo using process interaction in method.py  Dining philosophers animated Pythonic.py  Dining philosophers animated.py  Dining philosophers.py  Elevator animated new.py  Elevator animated.py  Elevator video.py  Elevator.py  Example - bank, 1 clerk.py  Example - bank, 3 clerks (data components).py  Example - bank, 3 clerks (resources).py  Example - bank, 3 clerks (standby).py  Example - bank, 3 clerks (state).py  Example - bank, 3 clerks x.py  Example - bank, 3 clerks, reneging (resources).py  Example - bank, 3 clerks, reneging.py  Example - bank, 3 clerks.py  Example - basic.py  Example bank - 3 clerks (data components).py  Fuel station resource animated.py  Gas station.py  Job shop animated.py  LICENSE  (+60 more)
install_opengl/: folder_to_py.py  opengl_installler_make.py
salabim/: LICENSE.txt  __init__.py  changelog.txt  salabim.py
sample 3d models/: 12281_Container_v2_L2.mtl  cymulation3d cover.py  cymulation3d linkedin.py  cymulation3d.py  cymulation3d_OHBC.py  cymulation3d_OHBC_yield.py  cymulation3d_yield.py  demo 3d animate queue.py  demo 3d animate queue_yield.py  (+5 more)
(+201 files in other folders)
